Tweak social media buttons

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			</section>
 
 		<!-- Four -->
-			<section id="four" class="main style2 special">
+			<!-- <section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
 						<h2>Ipsum feugiat consequat?</h2>
@@ -130,7 +130,7 @@
 						<li><a href="#" class="button wide">Learn More</a></li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Five -->
 		<!--
@@ -453,9 +453,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://www.linkedin.com/in/rihanamartinson/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/martinson-r" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:martinson-r@gmail.com" class="icon solid alt fa fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
