--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
+						<!-- <div class="col-6 col-12-medium"> -->
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
@@ -39,10 +39,10 @@
 							</p>
 							<p>Eventually, I decided that simple HTML emails were not enough, and I enrolled in App Academy - a coding boot camp with a &#60;3&#37; acceptance rate. I spent the next several months transforming into a Full Stack Software Engineer, and have since built several full stack projects from back to front.</p>
 						</div>
-						<div class="col-6 col-12-medium imp-medium">
+						<!-- <div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/linkedin.jpg" alt="" /></span>
-						</div>
-					</div>
+						</div> -->
+					<!-- </div> -->
 				</div>
 			</section>
 
