Update images, descriptions of projects

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<h2>I have experience with a wide range of languages and technologies</h2>
 							</header>
 							<p>I can code a responsive HTML email and blast it via MailChimp, and spin up a server connected to a database with a React front-end. In the span of my career, I have coded everything from simple landing pages to fully-featured web applications and iOS mobile apps.</p>
-							<p>I am proficient in JavaScript, Python, and Swift, and have experience with Express, Flask, PostgreSQL, React-JS, and Redux.</p>
+							<p>I am proficient in JavaScript, Python, and Swift, and have experience with Express, Flask, PostgreSQL, GraphQL, React-JS, and Redux.</p>
 							<p>I am always on the move, always learning and growing. I strongly believe that no problem is insurmountable if tackled from the right direction.</p>
 						</div>
 					</div>
@@ -73,50 +73,51 @@
 			</section>
 
 		<!-- Three -->
-			<section id="three" class="main style1 special">
-				<div class="container">
-					<header class="major">
-						<h2>A Few Of My Projects</h2>
-					</header>
-					<p>Here are a few projects that I am particularly proud of.</p>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/headcanon.png" alt="HeadCanonDB screenshot" /></span>
-							<h3>HeadCanonDB</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="https://github.com/martinson-r/Headcanon-App" class="button">GitHub</a></li>
-							</ul>
-							<ul class="actions special">
-								<li><a href="https://headcanondb.herokuapp.com" class="button">Live</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/chorescore.png" alt="ChoreScore 2020 screenshot" /></span>
-							<h3>ChoreScore 2020</h3>
-							<p>A Remember The Milk clone focused on motivating you to do your chores!</p>
-							<br />
-							<ul class="actions special">
-								<li><a href="https://github.com/ChadCalcote/ChoreScore" class="button">GitHub</a></li>
-							</ul>
-							<ul class="actions special">
-								<li><a href="http://chorescore2020.herokuapp.com" class="button">Live</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/tabletopr.png" alt="" /></span>
-							<h3>Tabletopr-Groupfinder</h3>
-							<p>Tabletopr-Groupfinder is an app that connects tabletop RPG hosts with potential players.</p>
-							<ul class="actions special">
-								<li><a href="https://github.com/martinson-r/Tabletopr" class="button">GitHub</a></li>
-							</ul>
-							<ul class="actions special">
-								<li><a href="https://tabletopr-groupfinder.herokuapp.com" class="button">Live</a></li>
-							</ul>
-						</div>
+		<section id="three" class="main style1 special">
+			<div class="container">
+				<header class="major">
+					<h2>A Few Of My Projects</h2>
+				</header>
+				<p>Here are a few projects that I am particularly proud of.</p>
+				<div class="row gtr-150">
+					<div class="col-4 col-12-medium">
+						<span class="image fit"><img src="images/tabletop-advanced.jpg" alt="Tabletop Advanced screenshot" /></span>
+						<h3>Tabletop Advanced</h3>
+						<p>Tabletop Advanced provides a platform for users to play and watch tabletop role playing games
+						</p>
+						<ul class="actions special">
+							<li><a href="https://github.com/martinson-r/tabletop-advanced" class="button">GitHub</a></li>
+						</ul>
+						<ul class="actions special">
+							<li><a href="http://tabletop-advanced.herokuapp.com" class="button">Live</a></li>
+						</ul>
+					</div>
+					<div class="col-4 col-12-medium">
+						<span class="image fit"><img src="images/headcanon.jpg" alt="HeadCanonDB screenshot" style="border: 1px solid gray" /></span>
+						<h3>HeadCanonDB</h3>
+						<p>Based on GoodReads, HeadCanonDB allows users to collect and organize their favorite fanfiction</p>							</p>
+						<ul class="actions special">
+							<li><a href="https://github.com/martinson-r/Headcanon-App" class="button">GitHub</a></li>
+						</ul>
+						<ul class="actions special">
+							<li><a href="https://headcanondb.herokuapp.com" class="button">Live</a></li>
+						</ul>
+					</div>
+					<div class="col-4 col-12-medium">
+						<span class="image fit"><img src="images/chorescore.jpg" alt="Chore Score screenshot" /></span>
+						<h3>ChoreScore</h3>
+						<p>A Remember The Milk clone focused on motivating you to do your chores!</p>
+						<br />
+						<ul class="actions special">
+							<li><a href="https://github.com/ChadCalcote/ChoreScore" class="button">GitHub</a></li>
+						</ul>
+						<ul class="actions special">
+							<li><a href="https://chorescore2020.herokuapp.com/" class="button">Live</a></li>
+						</ul>
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
 
 		<!-- Four -->
 			<!-- <section id="four" class="main style2 special">
@@ -458,7 +459,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="mailto:martinson-r@gmail.com" class="icon solid alt fa fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Rihana Martinson</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
