Update information and styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Rihana Martinson - Portfolio</title>
+		<title>Rihana Martinson (Chang) - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,20 +17,17 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<h1>Hi, I'm <strong>Rihana Martinson</strong>, a Full Stack Software Engineer.</h1>
+					<h1>Hi, I'm <strong>Rihana Martinson</strong>, a Front End and UX Engineer.</h1>
 					<p>I am passionate about using web apps to solve real-world problems.<br />
 					I use that passion to make the world a better place.</p>
-					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Learn more about me</a></li>
-					</ul>
 				</div>
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style1">
+			<!-- <section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
-						<!-- <div class="col-6 col-12-medium"> -->
+						<div class="col-6 col-12-medium">
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
@@ -39,12 +36,12 @@
 							</p>
 							<p>Eventually, I decided that simple HTML emails were not enough, and I enrolled in App Academy - a coding boot camp with a &#60;3&#37; acceptance rate. I spent the next several months transforming into a Full Stack Software Engineer, and have since built several full stack projects from back to front.</p>
 						</div>
-						<!-- <div class="col-6 col-12-medium imp-medium">
+						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/linkedin.jpg" alt="" /></span>
-						</div> -->
-					<!-- </div> -->
+						</div>
+					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Two -->
 			<section id="two" class="main style2">
@@ -65,59 +62,56 @@
 								<h2>I have experience with a wide range of languages and technologies</h2>
 							</header>
 							<p>I can code a responsive HTML email and blast it via MailChimp, and spin up a server connected to a database with a React front-end. In the span of my career, I have coded everything from simple landing pages to fully-featured web applications and iOS mobile apps.</p>
-							<p>I am proficient in JavaScript, Python, and Swift, and have experience with Express, Flask, PostgreSQL, GraphQL, React-JS, and Redux.</p>
-							<p>I am always on the move, always learning and growing. I strongly believe that no problem is insurmountable if tackled from the right direction.</p>
+							<p>I am proficient in JavaScript, Python, and React/Redux, and have experience with Express, Flask, PostgreSQL, and Swift.</p>
+							<p>I believe that no problem is insurmountable if tackled from the right direction.</p>
 						</div>
 					</div>
 				</div>
 			</section>
 
 		<!-- Three -->
-		<section id="three" class="main style1 special">
-			<div class="container">
-				<header class="major">
-					<h2>A Few Of My Projects</h2>
-				</header>
-				<p>Here are a few projects that I am particularly proud of.</p>
-				<div class="row gtr-150">
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/tabletop-advanced.jpg" alt="Tabletop Advanced screenshot" /></span>
-						<h3>Tabletop Advanced</h3>
-						<p>Tabletop Advanced provides a platform for users to play and watch tabletop role playing games
-						</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/martinson-r/tabletop-advanced" class="button">GitHub</a></li>
-						</ul>
-						<ul class="actions special">
-							<li><a href="http://tabletop-advanced.herokuapp.com" class="button">Live</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/headcanon.jpg" alt="HeadCanonDB screenshot" style="border: 1px solid gray" /></span>
-						<h3>HeadCanonDB</h3>
-						<p>Based on GoodReads, HeadCanonDB allows users to collect and organize their favorite fanfiction</p>							</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/martinson-r/Headcanon-App" class="button">GitHub</a></li>
-						</ul>
-						<ul class="actions special">
-							<li><a href="https://headcanondb.herokuapp.com" class="button">Live</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-12-medium">
-						<span class="image fit"><img src="images/chorescore.jpg" alt="Chore Score screenshot" /></span>
-						<h3>ChoreScore</h3>
-						<p>A Remember The Milk clone focused on motivating you to do your chores!</p>
-						<br />
-						<ul class="actions special">
-							<li><a href="https://github.com/ChadCalcote/ChoreScore" class="button">GitHub</a></li>
-						</ul>
-						<ul class="actions special">
-							<li><a href="https://chorescore2020.herokuapp.com/" class="button">Live</a></li>
-						</ul>
+			<section id="three" class="main style1 special">
+				<div class="container">
+					<header class="major">
+						<h2>Professional Work and Projects</h2>
+					</header>
+
+					<!-- <div class="row gtr-150">
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/headcanon.png" alt="HeadCanonDB screenshot" /></span>
+							<h3>HeadCanonDB</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/martinson-r/Headcanon-App" class="button">GitHub</a></li>
+							</ul>
+							<ul class="actions special">
+								<li><a href="https://headcanondb.herokuapp.com" class="button">Live</a></li>
+							</ul>
+						</div> -->
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/nasm-page.png" alt="NASM Website, June 2024" /></span>
+							<h3>NASM.org</h3>
+							<p>I'm a UX Engineer for a top-rated organization providing the best credentials in the fitness industry.</p>
+							<p>In addition to page builds and general site maintenance, I coded a script that feeds dynamic pricing and sales copy data to hundreds of pages on the website.</p>
+							<p>I also built a dynamic, JSON-driven navigation that is easy to update, with very little technical knowledge required to do so.</p>
+							<br />
+							<ul class="actions special">
+								<li><a href="https://www.nasm.org" class="button">Visit the Site</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/tta.png" alt="" /></span>
+							<h3>Tabletop Advanced</h3>
+							<p>Tabletop Advanced is a React app that connects tabletop RPG hosts with potential players, employing PostGres and GraphQL.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/martinson-r/tabletop-advanced" class="button">GitHub</a></li>
+								<li><a href="https://tabletop-advanced-59117c0eaad0.herokuapp.com/" class="button">Live</a></li>
+							</ul>
+
+						</div>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
 		<!-- Four -->
 			<!-- <section id="four" class="main style2 special">
@@ -454,12 +448,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/rihanamartinson/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.linkedin.com/in/rihanamartinson" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://github.com/martinson-r" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:martinson-r@gmail.com" class="icon solid alt fa fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:martinson.r@gmail.com" class="icon solid alt fa fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Rihana Martinson</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Rihana Chang</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
