Add images, update styling and information

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/tta.png" alt="" /></span>
+							<span class="image fit"><img src="images/tabletop-advanced.jpg" alt="" /></span>
 							<h3>Tabletop Advanced</h3>
 							<p>Tabletop Advanced is a React app that connects tabletop RPG hosts with potential players, employing PostGres and GraphQL.</p>
 							<ul class="actions special">
